new detail product

--- a/detail/hp-notebook-14.html
+++ b/detail/hp-notebook-14.html
@@ -7,15 +7,15 @@
   <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-  <link rel="stylesheet" href="css/product.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="../css/product.css">
+  <link rel="stylesheet" href="../css/custom.css">
   <title>Product Details</title>
 </head>
 <body>
       <!-- Navigasi Bar -->
   <nav class="navbar navbar-expand-lg bg-custom">
         <div class="container">
-          <a class="navbar-brand font-weight-bold" href="index.html">Hikari Comp</a>
+          <a class="navbar-brand font-weight-bold" href="../index.html">Hikari Comp</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,17 +27,17 @@
                   Merk
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="lenovo.html">Lenovo</a>
-                  <a class="dropdown-item" href="asus.html">Asus</a>
+                  <a class="dropdown-item" href="../lenovo.html">Lenovo</a>
+                  <a class="dropdown-item" href="../asus.html">Asus</a>
                   <!-- <div class="dropdown-divider"></div> -->
-                  <a class="dropdown-item" href="acer.html">Acer</a>
+                  <a class="dropdown-item" href="../mac.html">Mac</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="store.html">Store</a>
+                <a class="nav-link" href="../store.html">Store</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="../contact.html">Contact</a>
               </li>
               
             </ul>
@@ -50,7 +50,7 @@
                         </button>
                     </div>
                 </div>
-                <a class="btn btn-lg ml-2" href="cart.html">
+                <a class="btn btn-lg ml-2" href="../cart.html">
                     <i class="fa fa-shopping-cart"></i> 
                 </a>
             </form>
@@ -64,7 +64,7 @@
                     <div class="col">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb bg-white">
-                                <li class="breadcrumb-item"><a href="index.html" class="text-link">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../index.html" class="text-link">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Product</li>
                             </ol>
                         </nav>
@@ -74,31 +74,29 @@
                     <div class="col-12 col-lg-6">
                         <div class="card bg-light mb-3">
                             <div class="card-body">
-                                <div class="produk-img">
-                                    <img class="img-fluid" src="img/Asusx441.jpg"/>
-                                </div>
+                                <img class="img-fluid" src="../img/product/hp-notebook-14.jpg" />
                             </div>
                         </div>
                     </div>
         <!-- card name  -->
-                <div class="col-12 col-lg-6 add_to_cart_block">
-                    <div class="card bg-light mb-3">
+                <div class="col-12 col-lg-6">
+                    <div class="card bg-light p-2">
                         <div class="card-body">
-                            <h2 class="text-left">Asus x441uv</h2>
-                            <div class="reviews_product p-3 mb-2 text-left">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star "></span>
-                                <span> (based on ratings) </span> 
-                                <p  class="text-lg warna prices"><strike style="color:gray" class="text-xl">Rp4.250.000</strike> Rp3.995.000</p>                                 
+                            <h2 class="text-left">HP CF2005TX CF2004TX</h2>
+                            <div class="mb-1 text-left">
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span> (based on ratings) </span> 
+                                <p class="prices"> Rp 5.200.000</p>
                                 <p><b>Availability :</b> In Stock</p>
                                 <p><b>Condition :</b> New</p>
-                                <p><b>Merk :</b> Asus</p>
+                                <p><b>Merk :</b> DELL</p>
                             </div>
-                            <div class="btn buy_now_btn">
-                                <a href="payment.html"><b>buy now</b></a>
+                            <div class="btn buy_now_btn mb-3">
+                                <a href="../payment.html">buy now</a>
                             </div>
                         </div>
                     </div>
@@ -122,115 +120,96 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="product_deatils_tab_content">
-                            <div role="tabpanel" id="description" class="product_tab_content active">
+                        <div role="tabpanel" id="description" class="product_tab_content active">
                             <div class="product_description_wrap">
                                 <div class="product_desc">
-                                    <h5 class="text-left">Asus x441uv intel core i3-6006u vga 920mx nvidia gaming</h5>
+                                    <h5 class="text-left">HP CF2005TX CF2004TX</h5>
                                     <p>Spesifikasi : </p>
                                     <ul class="list-group-flush text-left ">
-                                        <li class="list-group-item-light col-6">Intel Core i6-6006u</li>
-                                        <li class="list-group-item-light col-6 ">RAM 4GB</li>
-                                        <li class="list-group-item-light col-6 ">500Gb HDD</li>
-                                        <li class="list-group-item-light col-6 "> Lcd 14inc</li>
+                                        <li class="list-group-item-light col-6">Intel® Core™ i5 4300</li>
+                                        <li class="list-group-item-light col-6 ">RAM 4GB DDR3</li>
+                                        <li class="list-group-item-light col-6 ">512GB HDD</li>
+                                        <li class="list-group-item-light col-6 ">Lcd 14 inc</li>
                                         <li class="list-group-item-light col-6 ">Dvd, USB 3.0</li>
-                                        <li class="list-group-item-light col-6 ">Vga nvidia 2gb 920mx</li>
-                                        <li class="list-group-item-light col-6 ">Vga intel hd 2gb</li>
                                         <li class="list-group-item-light col-6 ">Windows 10 original</li>
                                     </ul>
                                     <p>Kelengkapan : </p>
                                     <ul class="list-group-flush text-left ">
-                                        <li class="list-group-item-light col-6 ">1 unit Asus x441uv</li>
+                                        <li class="list-group-item-light col-6 ">1 unit laptop</li>
                                         <li class="list-group-item-light col-6 ">Charger</li>
                                         <li class="list-group-item-light col-6 ">Bonus Tas, buku panduan</li>
                                     </ul>
                                 </div>
-                    </div>
-                </div>
-                <!-- tab review  -->
-                <div role="tabpanel" id="reviews" class="product_tab_content">
-                        <ul class="list-unstyled text-justify mt-30">
-                            <li class="media">
-                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
-                                <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
-                                <ul class="rating mb-0 mt-0">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
-                                    </ul>
-                                <p class="text">
-                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                                </p> 
-                                </div>
-                            </li>
-                            <li class="media my-4">
-                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
-                                <div class="media-body">
-                                <h5 class="mb-0 name">Yahya Wildan</h5>
-                                <p class="mb-0 date">01 Jan, 2020 at: 02:30pm</p>
-                                <ul class="rating mb-0 mt-0">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                    </ul>
-                                    <p class="text">
-                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                                    </p> 
-                                </div>
-                            </li>
-                            <li class="media">
-                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
-                                <div class="media-body">
-                                <h5 class="mb-0 name">Wahyu_Boy</h5>
-                                <p class="mb-0 date">05 Jan, 2020 at: 02:30pm</p>
-                                <ul class="rating mb-0 mt-0">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                    </ul>
-                                    <p class="text">
-                                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                                    </p> 
-                                </div>
-                            </li>
-                              </ul>
-                            <div class="rating_wrap">
-                            <h2 class="rating-title">Write a review</h2>
-                            <h4 class="rating-title-2">Your Rating</h4>
-                            <ul class="rating1">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </ul>
+                            </div>
                         </div>
-                    <div class="container">
-                        <form id="review-form">
-                            <div class="row">
-                                <div class="col">
-                                <input type="text" class="form-control" placeholder="Your Name">
+                        <!-- tab review  -->
+                        <div role="tabpanel" id="reviews" class="product_tab_content">
+                                <ul class="list-unstyled text-justify mt-30">
+                                    <li class="media">
+                                        <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                        <div class="media-body">
+                                        <h5 class="mb-0 name">Pankong JS</h5>
+                                        <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                        <ul class="rating mb-0 mt-0">
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star"></span>
+                                                <span class="fa fa-star"></span>
+                                            </ul>
+                                        <p class="text">
+                                            Pengiriman cepat mantap gan, paking rapi
+                                        </p> 
+                                        </div>
+                                    </li>
+                                    <li class="media">
+                                        <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                        <div class="media-body">
+                                        <h5 class="mb-0 name">Andi Sulistiyo</h5>
+                                        <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                        <ul class="rating mb-0 mt-0">
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                            </ul>
+                                            <p class="text">
+                                                Laptop baik sekali, pangiriman cepat gan
+                                            </p> 
+                                        </div>
+                                    </li>
+                                    </ul>
+                                    <div class="rating_wrap">
+                                    <h2 class="rating-title">Write a review</h2>
+                                    <h4 class="rating-title-2">Your Rating</h4>
+                                    <ul class="rating1">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </ul>
                                 </div>
-                                <div class="col">
-                                <input type="text" class="form-control" placeholder="Email">
+                                <div class="container">
+                                    <form id="review-form">
+                                        <div class="row">
+                                            <div class="col">
+                                            <input type="text" class="form-control" placeholder="Your Name">
+                                            </div>
+                                            <div class="col">
+                                            <input type="text" class="form-control" placeholder="Email">
+                                            </div>
+                                        </div>     
+                                        <div class="form-group">
+                                            <textarea class="form-control mt-30" id="exampleFormControlTextarea1" rows="5" placeholder="write Your Message"></textarea>
+                                        </div>
+                                        <div class="btn buy_now_btn">
+                                            <a class="fv-btn" href="#">submit review</a>
+                                        </div>
+                                    </form>
                                 </div>
-                            </div>     
-                            <div class="form-group">
-                                <textarea class="form-control mt-30" id="exampleFormControlTextarea1" rows="5" placeholder="write Your Message"></textarea>
                             </div>
-                            <div class="btn buy_now_btn">
-                                <a class="fv-btn" href="#">submit review</a>
-                            </div>
-                        </form>
-                    </div>
-                    </div>
                  </div>
             </div>
         </div>
