--- a/detail/toshiba-c840.html
+++ b/detail/toshiba-c840.html
@@ -120,81 +120,97 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="product_deatils_tab_content">
-                            <div role="tabpanel" id="description" class="product_tab_content active">
+                        <div role="tabpanel" id="description" class="product_tab_content active">
                             <div class="product_description_wrap">
                                 <div class="product_desc">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis noexercit ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.</p>
+                                    <h5 class="text-left">Toshiba Satellite C840</h5>
+                                    <p>Spesifikasi : </p>
+                                    <ul class="list-group-flush text-left ">
+                                        <li class="list-group-item-light col-6">Intel Core i6-6006u</li>
+                                        <li class="list-group-item-light col-6 ">RAM 4GB</li>
+                                        <li class="list-group-item-light col-6 ">500Gb HDD</li>
+                                        <li class="list-group-item-light col-6 "> Lcd 14inc</li>
+                                        <li class="list-group-item-light col-6 ">Dvd, USB 3.0</li>
+                                        <li class="list-group-item-light col-6 ">Vga intel HD3000</li>
+                                        <li class="list-group-item-light col-6 ">Windows 7 original</li>
+                                    </ul>
+                                    <p>Kelengkapan : </p>
+                                    <ul class="list-group-flush text-left ">
+                                        <li class="list-group-item-light col-6 ">1 unit laptop</li>
+                                        <li class="list-group-item-light col-6 ">Charger</li>
+                                        <li class="list-group-item-light col-6 ">Bonus Tas, buku panduan</li>
+                                    </ul>
+                                </div>
                             </div>
-                    </div>
-                </div>
-                <!-- tab review  -->
-                <div role="tabpanel" id="reviews" class="product_tab_content">
-                        <ul class="list-unstyled text-justify mt-30">
-                            <li class="media">
-                                <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
-                                <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
-                                <ul class="rating mb-0 mt-0">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
-                                    </ul>
-                                <p class="text">
-                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                                </p> 
-                                </div>
-                            </li>
-                            <li class="media">
-                                <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
-                                <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
-                                <ul class="rating mb-0 mt-0">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
-                                    </ul>
-                                    <p class="text">
-                                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                                    </p> 
-                                </div>
-                            </li>
-                              </ul>
-                            <div class="rating_wrap">
-                            <h2 class="rating-title">Write a review</h2>
-                            <h4 class="rating-title-2">Your Rating</h4>
-                            <ul class="rating1">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </ul>
                         </div>
-                    <div class="container">
-                        <form id="review-form">
-                            <div class="row">
-                                <div class="col">
-                                <input type="text" class="form-control" placeholder="Your Name">
+                        <!-- tab review  -->
+                        <div role="tabpanel" id="reviews" class="product_tab_content">
+                                <ul class="list-unstyled text-justify mt-30">
+                                    <li class="media">
+                                        <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                        <div class="media-body">
+                                        <h5 class="mb-0 name">Wisnu Ayes</h5>
+                                        <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                        <ul class="rating mb-0 mt-0">
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star"></span>
+                                                <span class="fa fa-star"></span>
+                                            </ul>
+                                        <p class="text">
+                                            Pengiriman cepat mantap gan
+                                        </p> 
+                                        </div>
+                                    </li>
+                                    <li class="media">
+                                        <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                        <div class="media-body">
+                                        <h5 class="mb-0 name">Rakasiwi</h5>
+                                        <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                        <ul class="rating mb-0 mt-0">
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star"></span>
+                                            </ul>
+                                            <p class="text">
+                                                Response cepat, pelayanan terbaik
+                                            </p> 
+                                        </div>
+                                    </li>
+                                    </ul>
+                                    <div class="rating_wrap">
+                                    <h2 class="rating-title">Write a review</h2>
+                                    <h4 class="rating-title-2">Your Rating</h4>
+                                    <ul class="rating1">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </ul>
                                 </div>
-                                <div class="col">
-                                <input type="text" class="form-control" placeholder="Email">
+                                <div class="container">
+                                    <form id="review-form">
+                                        <div class="row">
+                                            <div class="col">
+                                            <input type="text" class="form-control" placeholder="Your Name">
+                                            </div>
+                                            <div class="col">
+                                            <input type="text" class="form-control" placeholder="Email">
+                                            </div>
+                                        </div>     
+                                        <div class="form-group">
+                                            <textarea class="form-control mt-30" id="exampleFormControlTextarea1" rows="5" placeholder="write Your Message"></textarea>
+                                        </div>
+                                        <div class="btn buy_now_btn">
+                                            <a class="fv-btn" href="#">submit review</a>
+                                        </div>
+                                    </form>
                                 </div>
-                            </div>     
-                            <div class="form-group">
-                                <textarea class="form-control mt-30" id="exampleFormControlTextarea1" rows="5" placeholder="write Your Message"></textarea>
                             </div>
-                            <div class="btn buy_now_btn">
-                                <a class="fv-btn" href="#">submit review</a>
-                            </div>
-                        </form>
-                    </div>
-                    </div>
                  </div>
             </div>
         </div>
